--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,10 @@
         android:layout_height="match_parent"
         android:orientation="vertical" >
 
+        <include
+            layout="@layout/toolbar"
+            android:id="@+id/toolbar" />
+
         <FrameLayout
             android:id="@+id/content_frame"
             android:layout_width="match_parent"
