--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -14,6 +14,12 @@
         android:orientation="vertical"
         android:gravity="bottom|start"
         android:layout_margin="16dp" >
+        <!--
+        <include
+            layout="@layout/toolbar"
+            android:id="@+id/toolbar"
+            />
+            -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
