--- a/app/src/main/res/layout/fragment_nytt_bilde.xml
+++ b/app/src/main/res/layout/fragment_nytt_bilde.xml
@@ -18,7 +18,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
-        android:text="@string/bildetittel" />
+        android:text="@string/bildetittel"
+        android:autofillHints="Bildetittel" />
 
     <Button
         android:id="@+id/galleri"
@@ -42,14 +43,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Tilbake" />
+            android:text="@string/tilbake" />
 
         <Button
             android:id="@+id/lagre"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Lagre" />
+            android:text="@string/lagre" />
 
     </LinearLayout>
 
