--- a/app/src/main/res/layout/activity_spill.xml
+++ b/app/src/main/res/layout/activity_spill.xml
@@ -28,7 +28,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="gfhfghfgh"
             android:textAlignment="textEnd"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="24sp"
@@ -43,10 +42,10 @@
             android:id="@+id/text_utfall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            android:layout_marginTop="100dp"
             android:layout_marginStart="40dp"
-            android:textColor="@color/colorPrimaryDark"/>
+            android:layout_marginTop="100dp"
+            android:textColor="@color/textcolor"
+            android:textSize="20sp" />
 
 
     </FrameLayout>
