--- a/app/src/main/res/layout/fragment_hovedside.xml
+++ b/app/src/main/res/layout/fragment_hovedside.xml
@@ -20,7 +20,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="Spill"
+            android:text="@string/SpillLek"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
