--- a/app/src/main/res/layout/fragment_endre_legg_til.xml
+++ b/app/src/main/res/layout/fragment_endre_legg_til.xml
@@ -11,9 +11,11 @@
         android:id="@+id/leggTilTwist"
         android:layout_width="175dp"
         android:layout_height="70dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="235dp"
+        android:layout_marginStart="105dp"
+        android:layout_marginTop="156dp"
+        android:layout_marginEnd="104dp"
         android:text="@string/legg_til_twist"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,9 +23,23 @@
         android:id="@+id/leggTilBilde"
         android:layout_width="175dp"
         android:layout_height="70dp"
-        android:layout_marginTop="235dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="105dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="104dp"
         android:text="@string/legg_til_bilde"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/leggTilLek" />
+
+    <Button
+        android:id="@+id/leggTilLek"
+        android:layout_width="175dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="105dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="104dp"
+        android:text="@string/leggTilLek"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/leggTilTwist" />
 </android.support.constraint.ConstraintLayout>
