--- a/app/src/main/res/layout/fragment_nytt_bilde.xml
+++ b/app/src/main/res/layout/fragment_nytt_bilde.xml
@@ -18,8 +18,8 @@
         android:id="@+id/nyttBildeTittel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
-        android:text="@string/bildetittel"
+        android:inputType=""
+        android:hint="Bildetittel"
      />
 
 
