--- a/app/src/main/res/layout-land/fragment_nytt_bilde.xml
+++ b/app/src/main/res/layout-land/fragment_nytt_bilde.xml
@@ -23,7 +23,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:inputType="text"
-        android:text="@string/bildetittel"
+        android:hint="Bildetittel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/valgtBilde" />
