--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@color/textcolor"
     android:layout_height="match_parent"
-    tools:context=".Settings">
+    tools:context=".settingsFragment">
 
 
     <ListView
